fixed text-input vertical padding mixin

--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -44,11 +44,9 @@
 @mixin fo-text-input-vertical-padding($top, $bottom) {
   ::ng-deep fo-text-input {
     fo-label {
-      div#flexContainer {
-        input {
-          padding-top: $top;
-          padding-bottom: $bottom;
-        }
+      div#flexContainer.themeable {
+        padding-top: $top;
+        padding-bottom: $bottom;
       }
     }
   }
