--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -1,5 +1,8 @@
+@import "package:fo_components/components/fo_dropdown/mixins";
 @mixin fo-text-input-colors($textColor, $borderColor, $iconColor, $alertColor, $backgroundColor: white) {
   ::ng-deep fo-text-input {
+    @include fo-dropdown-border-color($borderColor);
+
     fo-label {
       div#flexContainer {
         border-color: $borderColor;
