--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -4,6 +4,7 @@
              [attr.square]="square"
              [offsetTop]="offsetTop"
              [offsetHorizontal]="offsetHorizontal"
+             [maxHeight]="maxHeight"
              [constrainToViewPort]="constrainToViewPort"
              [targetPosition]="targetPosition"
              [visible]="visible"
