--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -36,6 +36,7 @@
                     [attr.noShadow]="noFocusShadow"
                     [attr.square]="square"
                     [filter]="filterValue"
+                    [maxHeight]="dropdownMaxHeight"
                     [constrainToViewPort]="constrainToViewPort"
                     [materialIcons]="materialIcons"
                     [width]="dropdownWidth"
