--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
@@ -16,7 +16,7 @@
            [class.semi-bold]="model.renderSecondaryLabel?.isEmpty == false">{{model.renderLabel}}</div>
       <div id="secondaryLabel">{{model.renderSecondaryLabel}}</div>
     </td>
-    <td class="black-color info"
+    <td class="info"
         *ngIf="model.renderInfo?.isEmpty == false"> {{model.renderInfo}} </td>
     <td class="icon"
         *ngIf="model.renderIcon?.isEmpty == false && model.renderImage?.isEmpty == false">
