--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -28,14 +28,13 @@
   </div>
   <div *ngFor="let category of filteredOptions.keys">
     <div *ngIf="showCategoryLabels == true && category.isNotEmpty"
-         class="black-color category"><strong>{{category}}</strong></div>
+         class="category"><strong>{{category}}</strong></div>
     <fo-dropdown-option *ngFor="let option of filteredOptions[category]"
                         [model]="option"
                         [materialIcon]="materialIcons"
                         (mousedown)="onSelect($event, option)"
                         (touchstart)="onSelect($event, option)">
     </fo-dropdown-option>
-    <hr *ngIf="category != filteredOptions.keys.last"
-        class="gray-color-bright">
+    <hr *ngIf="category != filteredOptions.keys.last">
   </div>
 </fo-dropdown>
