more dropdown list style tweaks

--- a/lib/components/fo_dropdown_list/_mixins.scss
+++ b/lib/components/fo_dropdown_list/_mixins.scss
@@ -5,7 +5,7 @@
     @include fo-dropdown-border-color($borderColor);
     fo-dropdown {
       div#dropdownContent {
-        fo-dropdown-option:not(:hover) {
+        fo-dropdown-option {
           fo-icon {
             color: $primaryColor;
           }
@@ -21,7 +21,7 @@
         }
 
         fo-dropdown-option:hover {
-          background-color: $primaryColor;
+          background-color: lighten($borderColor, 10%);
         }
 
         hr {
