--- a/lib/components/fo_text_input/_shared.scss
+++ b/lib/components/fo_text_input/_shared.scss
@@ -9,7 +9,7 @@ $borderRadius: $x-small;
   width: 100%;
   box-sizing: border-box;
   outline: none;
-  min-width: 7rem;
+  min-width: 2em;
   box-shadow: none;
   -webkit-box-shadow: none;
   font-size: 1em;
