--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -1,5 +1,6 @@
 <fo-label [value]="label"></fo-label>
-<div id="flexContainer">
+<div id="flexContainer"
+     class="themeable">
   <div id="leftButton">
     <fo-button noRightBorder
                fullWidth
