--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.scss
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.scss
@@ -1,8 +1,8 @@
-@import 'package:grid_css/constants';
+@import "package:grid_css/constants";
 
 :host {
   display: block;
-  //font-size: 1rem;
+  z-index: 2;
 
   div#selectedOptions {
     border-style: dashed;
