--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -22,8 +22,7 @@
   </div>
   <div *ngIf="allowNullSelection && filter?.isEmpty != false">
     <fo-dropdown-option [model]="nullOption"
-                        (mousedown)="onSelect($event, nullOption)"
-                        (touchstart)="onSelect($event, nullOption)"
+                        (click)="onSelect($event, nullOption)"
                         [materialIcon]="materialIcons"></fo-dropdown-option>
   </div>
   <div *ngFor="let category of filteredOptions.keys">
@@ -32,8 +31,7 @@
     <fo-dropdown-option *ngFor="let option of filteredOptions[category]"
                         [model]="option"
                         [materialIcon]="materialIcons"
-                        (mousedown)="onSelect($event, option)"
-                        (touchstart)="onSelect($event, option)">
+                        (click)="onSelect($event, option)">
     </fo-dropdown-option>
     <hr *ngIf="category != filteredOptions.keys.last">
   </div>
