--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -46,13 +46,13 @@ $slideTransitionSpeed: 200ms;
   }
 
   #arrow-left {
-    left: 0.5em;
+    left: 0;
     right: auto;
   }
 
   #arrow-right {
     left: auto;
-    right: 0.5em;
+    right: 0;
   }
 
   @media screen and (max-width: $medium-width-threshold - 1) {
