Added dropdownMaxHeight input to dropdownselect

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -30,6 +30,7 @@
                   [attr.square]="square"
                   [options]="options"
                   [showSearch]="showSearch"
+                  [maxHeight]="dropdownMaxHeight"
                   [showCategoryLabels]="showDropdownCategoryLabels"
                   [constrainToViewPort]="constrainToViewPort"
                   [allowNullSelection]="allowNullSelection"
