--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -16,6 +16,9 @@
         fo-icon {
           color: $iconColor;
         }
+        span.leadingText {
+          color: $borderColor;
+        }
       }
       div#flexContainer.error {
         border-color: $alertColor;
