--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -24,7 +24,7 @@
       @include inputStyle;
 
       line-height: 150%;
-      padding: 0 0.5em;
+      padding: 0;
 
       outline: none;
       margin: 0;
@@ -43,16 +43,15 @@
     }
 
     fo-icon.clear {
-      //z-index: 2;
       cursor: pointer;
       margin-right: 0.5em;
-      margin-left: -0.25em;
     }
 
-    fo-icon.leading {
-      //z-index: 2;
+    fo-icon.leadingIcon {
       margin-left: 0.5em;
-      margin-right: -0.25em;
+    }
+    span.leadingText {
+      margin: 0 0.25em;
     }
 
     ::ng-deep fo-button > button {
