fixed broken margins (1.5.7+1)

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -27,7 +27,7 @@
       padding: 0;
 
       outline: none;
-      margin: 0;
+      margin: 0 0.25em;
       align-self: stretch;
       border: 0;
     }
@@ -51,7 +51,7 @@
       margin-left: 0.5em;
     }
     span.leadingText {
-      margin: 0 0.25em;
+      margin-left: 0.25em;
     }
 
     ::ng-deep fo-button > button {
