--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -11,6 +11,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_dropdown_list/mixins";
 @import "components/fo_dropdown_select/mixins";
 @import "components/fo_dropdown_select_multi/mixins";
+@import "components/fo_label/mixins";
 @import "components/fo_modal/mixins";
 @import "components/fo_tab/mixins";
 @import "components/fo_text_input/mixins";
