Input background color now explicitly white

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -9,6 +9,7 @@
   position: relative;
 
   div#flexContainer {
+    background-color: white;
     display: flex;
     align-items: center;
     height: 100%;
