--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -7,6 +7,10 @@
 :host {
   display: block;
   position: relative;
+  @include fo-button-vertical-padding(0.5em);
+  fo-button {
+    margin: -0.5em 0;
+  }
 
   div#flexContainer {
     background-color: white;
@@ -18,7 +22,6 @@
     border-width: 1px;
     border-style: solid;
     overflow: hidden;
-    @include fo-button-vertical-padding(0.5em);
     padding: 0.5em 0;
 
     input {
