added addIcon input and minor style fixes to ImageFile

--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -29,6 +29,11 @@
       }
     }
 
+    fo-icon.add {
+      cursor: pointer;
+      font-size: 32px;
+    }
+
     p {
       margin-bottom: 0;
     }
