--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -10,27 +10,28 @@
          alt="{{alt}}"
          [style.filter]="brightnessFilter" />
     <fo-button class="delete color-alert"
+               square
                clearSize
                white
                dense
-               [materialIcon]="materialIcon"
+               [materialIcon]="materialIcons"
                [disabled]="disabled"
                (trigger)="fileInput.value = null; clearSource()"
                icon="delete">
     </fo-button>
   </div>
   <ng-container *ngIf="source == null || source.isEmpty">
-    <fo-button white               
-               [disabled]="disabled"
-               (trigger)="fileInput.click()"
-               [materialIcon]="materialIcon"
-               icon="add_a_photo">
-    </fo-button>
+    <fo-icon class="add"
+             (click)="fileInput.click()"
+             [material]="materialIcons"
+             [icon]="addIcon">
+    </fo-icon>
     <p id="placeholder"
        *ngIf="placeholder != null"> {{placeholder}} </p>
   </ng-container>
   <input type="file"
          #fileInput
+         [disabled]="disabled"
          (change)="onFileChange($event)"
          [accept]="accept" />
   <p *ngIf="invalidFile"
