--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -31,11 +31,11 @@
 
     fo-icon.add {
       cursor: pointer;
-      font-size: 32px;
+      font-size: 3em;
     }
 
     p {
-      margin-bottom: 0;
+      margin: 10px 0 0 0;
     }
 
     p#placeholder {
