TextInput placeholder is now grey

--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -65,7 +65,7 @@ $transitionSpeed: 0.3s ease;
 
   ::ng-deep input::placeholder,
   ::ng-deep textarea::placeholder {
-    color: $grayColorBright;
+    color: $grayColor;
   }
 
   ::ng-deep input::selection,
