--- a/lib/components/fo_text_input/fo_textarea_input_component.scss
+++ b/lib/components/fo_text_input/fo_textarea_input_component.scss
@@ -12,7 +12,7 @@
 
   textarea {
     @include inputStyle;
-    padding: 0.5em;
+    padding: 0.5em 0.25em;
     background-color: white;
     resize: none;
     border-style: solid;
