--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -10,6 +10,7 @@
   border-width: 1px;
   border-style: solid;
   border-radius: $x-small;
+  border-color: #cdd2d9;
   font-size: 1em;
   box-sizing: border-box;
 
@@ -25,6 +26,7 @@
     border-top-width: 1px;
     border-right-width: 0;
     border-bottom-width: 0;
+    border-color: #cdd2d9;
     width: 10px;
     height: 10px;
   }
