--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -63,16 +63,12 @@
 @mixin fo-text-input-vertical-padding($top, $bottom) {
   ::ng-deep fo-text-input {
     fo-label > label {
-      @include fo-button-vertical-padding($top);
-
       div#flexContainer.themeable {
-        padding-top: $top;
-        padding-bottom: $bottom;
-
-        fo-button {
-          margin-top: -$top;
-          margin-bottom: -$bottom;
+        input {
+          padding-top: $top;
+          padding-bottom: $bottom;
         }
+        @include fo-button-vertical-padding($top);
       }
     }
   }
